kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: stickies
  labels:
    name: stickies
  annotations:
    description: "Namespace for the Sticky Notes project"
    owner: "dimitrij.krstev@gmail.com"
