kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sticky-notes-spring-deployment
  namespace: stickies
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: stickies-spring-kiii-app
  template:
    metadata:
      labels:
        app: stickies-spring-kiii-app
    spec:
      containers:
        - name: stickies-spring-kiii-app
          image: dimitrijk/sticky-notes-spring-kiii:1.3
          ports:
            - containerPort: 8080
          livenessProbe:
              exec:
                command: [ "pg_isready", "-U", "postgres" ]
              initialDelaySeconds: 10
              periodSeconds: 10
