kubernetes/citus-coordinator-stateful.yml
apiVersion: v1
kind: Service
metadata:
  name: citus-coordinator
  namespace: stickies
spec:
  ports:
    - port: 5432
      name: postgres
  clusterIP: None
  selector:
    app: citus-coordinator
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: citus-coordinator
  namespace: stickies
spec:
  serviceName: "citus-coordinator"
  replicas: 1
  selector:
    matchLabels:
      app: citus-coordinator
  template:
    metadata:
      labels:
        app: citus-coordinator
    spec:
      containers:
        - name: citus-coordinator
          image: citusdata/citus:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "dimitrius", "-d", "sticky-notes-kiii"]
            initialDelaySeconds: 10
            periodSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
