kubernetes/citus-worker-stateful.yml
apiVersion: v1
kind: Service
metadata:
  name: citus-worker
  namespace: stickies
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: citus-worker
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: citus-worker
  namespace: stickies
spec:
  serviceName: "citus-worker"
  replicas: 3
  selector:
    matchLabels:
      app: citus-worker
  template:
    metadata:
      labels:
        app: citus-worker
    spec:
      containers:
      - name: citus-worker
        image: citusdata/citus:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        livenessProbe:
          exec:
            command: ["pg_isready", "-U", "dimitrius", "-d", "sticky-notes-kiii"]
          initialDelaySeconds: 10
          periodSeconds: 10
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
